# mbzirc2020_ball_filter

./: CMakeLists.txt  README.md  ball_filter.xml  balloon_filter.xml  package.xml  test.launch
config/: FilterParams.cfg  filter_params.yaml  tf_connector.yaml  trajectory_gen.yaml  trajectory_loader.yaml
include/ball_filter/: BallFilter.h  conic_rheiv.h  eight_ukf.h  plane_rheiv.h  vel_lkf.h
include/balloon_filter/: BalloonFilter.h  conic_rheiv.h  eight_rheiv.h  eight_ukf.h  plane_rheiv.h  vel_lkf.h
launch/: catch_eightball.launch  filter_eightball.launch  fly_to_start.launch  generate_eight.launch  load_eight.launch  load_eignt.launch  rviz.launch  start_following_eight.launch  tf_connector.launch
msg/: BallLocation.msg  BallPrediction.msg  FilterState.msg  LKFState.msg  Plane.msg  PlaneStamped.msg  UKFState.msg
plot_juggler/: curvature.xml
rviz/: rviz.rviz  rviz_pretty.rviz
scripts/: curv_generator.m  eight_generator.py  ellipse_dist.m  eval_ellipse.m  plot_ellipse.m  plot_hyperbola.m
src/: BallFilter.cpp  BalloonFilter.cpp  conic_rheiv.cpp  eight_rheiv.cpp  eight_ukf.cpp  plane_rheiv.cpp  vel_lkf.cpp
tmux_scripts/figure_8/: just_flying.sh
tmux_scripts/figure_8/custom_configs/: constraint_manager.yaml  control_manager.yaml  gain_manager.yaml  mpc_tracker.yaml  odometry.yaml
tmux_scripts/simulation/: .tmuxinator.yml  session.yml
tmux_scripts/simulation/custom_configs/: constraint_manager.yaml
